package edu.tanta.fci.reoil.controller;

import edu.tanta.fci.reoil.service.AuthenticationService;
import edu.tanta.fci.reoil.user.model.Login;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.PostMapping;
import org.springframework.web.bind.annotation.RequestBody;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
@RequestMapping("/api/v1/auth")
public class AuthController {

  private final AuthenticationService authenticationService;

  public AuthController(AuthenticationService authenticationService) {
    this.authenticationService = authenticationService;
  }

  @PostMapping
  public ResponseEntity<?> authenticate(@RequestBody Login login) {
    return new ResponseEntity<>(authenticationService.authenticate(login), HttpStatus.OK);
  }
}
