package edu.tanta.fci.reoil.model;

public record Charity(Long id, String name, String description, Long currentPoints) {
}
