package edu.tanta.fci.reoil.user.model;

public record Login(String email, String password) {
}
