package edu.tanta.fci.reoil.user.model;

public record UserProfile(String name, String email, int points) {
}
