package edu.tanta.fci.reoil.user.requests;

public record ResetPassword(String password, String passwordConfirmation) {
}
